--- a/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/variables/form-variables.scss
+++ b/src/Oro/Bundle/UIBundle/Resources/public/css/scss/mobile/variables/form-variables.scss
@@ -6,8 +6,10 @@ $input-font-size: 16px;
 $input-inner-offset: 11px 12px 10px 12px;
 $input-appearance: none;
 
+$selector-min-width: 100%;
 $selector-inner-offset: 0;
 $selector-span-inner-offset: $input-inner-offset;
+$selector-span-min-width: 100%;
 $selector-span-line-height: 1;
 $selector-span-height: $input-size;
 $selector-span-icon-top: 4px;
@@ -31,12 +33,15 @@ $form-horizontal-control-label-inner-line-height: 1.25;
 
 $form-horizontal-controls-offset-left: 0;
 
+$form-horizontal-controls-control-group-checkbox-offset-top: 12px;
+$form-horizontal-controls-control-group-checkbox-label-inner-offset-bottom: 0;
+
 $control-group-checkbox-position: relative;
 $control-group-checkbox-display: inline-block;
 $control-group-checkbox-inner-offset-right: 16px;
 
 $control-group-checkbox-label-width: auto;
-$control-group-checkbox-label-offset-right: 2px;
+$control-group-checkbox-label-offset-right: $content-padding-medium;
 $control-group-checkbox-label-line-height: 18px;
 
 $control-group-checkbox-controls-padding-top: 0;
